--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <h1 class="mainName">Claire Dimitriuc</h1>
             <div class="hero-btns">
                 <button><a href="#about" class="about " id="about-btn">About me</a></button>
-                <button>   <a href="#projects" class="projects-btn" id="projects-btn">Projects</a></button>
-                <button>   <a href="#skills" class="projects-btn" id="projects-btn">Skills</a></button>
+                <button><a href="#projects" class="projects-btn" id="projects-btn">Projects</a></button>
+                <button><a href="#skills" class="projects-btn" id="projects-btn">Skills</a></button>
             </div>
         </div>
     </section>
@@ -106,10 +106,10 @@
                 <div class="skill-type">
                     <h2 class="skill-type-title">Programming and Software</h2>
                     <p><span class="iconify" data-icon="logos:python" data-inline="false"></span>Python</p>
-                        <p><span class="iconify" data-icon="vscode-icons:file-type-c2" data-inline="false"></span>C</p>
-                            <p><span class="iconify" data-icon="vscode-icons:file-type-cpp" data-inline="false"></span>C++</p>
-                                <p><span class="iconify" data-icon="vscode-icons:file-type-powershell" data-inline="false"></span>PowerShell</p>
-                                    <p><span class="iconify" data-icon="mdi:bash" data-inline="false"></span>BASH</p>
+                    <p><span class="iconify" data-icon="vscode-icons:file-type-c2" data-inline="false"></span>C</p>
+                    <p><span class="iconify" data-icon="vscode-icons:file-type-cpp" data-inline="false"></span>C++</p>
+                    <p><span class="iconify" data-icon="vscode-icons:file-type-powershell" data-inline="false"></span>PowerShell</p>
+                    <p><span class="iconify" data-icon="mdi:bash" data-inline="false"></span>BASH</p>
                     <p><span class="iconify" data-icon="skill-icons:git" data-inline="false"></span>Git</p>
                     <p><span class="iconify" data-icon="devicon:matlab" data-inline="false"></span>Matlab</p> 
                 </div>
@@ -117,11 +117,11 @@
                 <div class="skill-type">
                     <h2 class="skill-type-title">Databases and Hardware</h2>
                     <p><span class="iconify" data-icon="vscode-icons:file-type-mongo" data-inline="false"></span>MongoDB</p>
-                        <p><span class="iconify" data-icon="vscode-icons:file-type-access" data-inline="false"></span>Microsoft Access</p>
-                            <p><span class="iconify" data-icon="vscode-icons:file-type-sql" data-inline="false"></span>SQL</p>
-                         <p><span class="iconify" data-icon="vscode-icons:file-type-systemverilog" data-inline="false"></span>System Verilog</p>
-                         <p><span class="iconify" data-icon="vscode-icons:file-type-verilog" data-inline="false"></span>Verilog</p>
-                     <p><span class="iconify" data-icon="file-icons:assembly-arm" data-inline="false"></span>ARM Assembly</p>
+                    <p><span class="iconify" data-icon="vscode-icons:file-type-access" data-inline="false"></span>Microsoft Access</p>
+                    <p><span class="iconify" data-icon="vscode-icons:file-type-sql" data-inline="false"></span>SQL</p>
+                    <p><span class="iconify" data-icon="vscode-icons:file-type-systemverilog" data-inline="false"></span>System Verilog</p>
+                    <p><span class="iconify" data-icon="vscode-icons:file-type-verilog" data-inline="false"></span>Verilog</p>
+                    <p><span class="iconify" data-icon="file-icons:assembly-arm" data-inline="false"></span>ARM Assembly</p>
                 </div>
             </div>
         </div>
@@ -152,16 +152,16 @@
                     <h2 class="individual-project-title">Digital Demodulation System</h2>
                     <p class="projectdesc">An end-to-end hardware design project that involved the complete design, assembly, and testing of a digital system capable
                         of demodulating upper sideband, lower sideband, and amplitude-modulated radio-frequency signals, fufilling one of many roles as part of the entire 
-                        class collaborating to build a functional radio. </p>
-                    <a class="project-link"  href="https://github.com/macaroonforu/Subsystem-B" class="github">Source Code  </a>
+                        class collaborating to build a functional radio.</p>
+                    <a class="project-link"  href="https://github.com/macaroonforu/Subsystem-B" class="github">Source Code</a>
                     <a class="project-link" href="projects/ece295.html" class="github">More Images + Information</a>
                     <p class="projectskill"><span class="iconify" data-icon="devicon:matlab" data-inline="false"></span>Matlab</p>
                     <p class="projectskill"><span class="iconify" data-icon="vscode-icons:file-type-light-systemverilog" data-inline="false"></span>System Verilog</p>
                     <p class="projectskill"><span class="iconify" data-icon="simple-icons:altiumdesigner" data-inline="false"></span>Altium Designer</p>
                     <p class="projectskill"><span class="iconify" data-icon="game-icons:soldering-iron" data-inline="false"></span>Soldering</p>
                     <p class="projectskill"><span class="iconify" data-icon="arcticons:oscilloscope" data-inline="false"></span>Waveform Generator/Oscilloscope/DMM</p>
-                    <p class="projectskill"><img src="projects/quartus.png" height="15px"> Quartus Prime</p>
-                    <p class="projectskill"><img src="projects/modelsim.png" height="15px"> ModelSim</p>
+                    <p class="projectskill"><img src="projects/quartus.png" height="15px">Quartus Prime</p>
+                    <p class="projectskill"><img src="projects/modelsim.png" height="15px">ModelSim</p>
                 </div>
                 <div class="project-image-content">
                     <img class="project-image" src="./projects/radio.jpg">
@@ -186,10 +186,10 @@
                     <p class="projectdesc">A weather application that allows one to search the name of a city or country, then fetches relevant data from an API and displays it on a web page.</p>
                         <a class="project-link"  href="https://github.com/macaroonforu/Weather-Application" class="github">Source Code</a>
                         <a class="project-link" href="https://weather-watcher.vercel.app/" class="github">Deployment</a>
-                        <p class="projectskill"><span class="iconify" data-icon="skill-icons:webpack-light" data-inline="false"></span>        Webpack</p>
-                        <p class="projectskill"><span class="iconify" data-icon="logos:javascript" data-inline="false"></span>        JavaScript</p>
-                        <p class="projectskill"><span class="iconify" data-icon="vscode-icons:file-type-html" data-inline="false"></span>        HTML</p>
-                        <p class="projectskill"><span class="iconify" data-icon="vscode-icons:file-type-css" data-inline="false"></span>        CSS</p>
+                        <p class="projectskill"><span class="iconify" data-icon="skill-icons:webpack-light" data-inline="false"></span>Webpack</p>
+                        <p class="projectskill"><span class="iconify" data-icon="logos:javascript" data-inline="false"></span>JavaScript</p>
+                        <p class="projectskill"><span class="iconify" data-icon="vscode-icons:file-type-html" data-inline="false"></span>HTML</p>
+                        <p class="projectskill"><span class="iconify" data-icon="vscode-icons:file-type-css" data-inline="false"></span>CSS</p>
                 </div>
                 <div class="project-image-content">
                     <img class="project-image" src="./projects/weather.png">
@@ -200,11 +200,11 @@
                 <div class="project-text-content">
                     <h2 class="individual-project-title">16-Bit Processor</h2>
                     <p class="projectdesc">A CPU designed with Verilog featuring general purpose registers, a stack pointer, a link register, a program counter, and an ALU, all of which are controlled by a finite-state machine. The processor supports memory read/writes as well as subroutines. Additionally, a game that interacts with LED switches and the HEX Display on the development board was written in assembly language to be run using the instruction set provided by the processor.</p>
-                        <a class="project-link"  href="https://github.com/macaroonforu/16-Bit-Processor" class="github">Source Code</a>
-                             <p class="projectskill"><img src="projects/quartus.png" height="15px"> Quartus Prime</p>
-                    <p class="projectskill"><img src="projects/modelsim.png" height="15px"> ModelSim</p>
-                      <p class="projectskill"><span class="iconify" data-icon="vscode-icons:file-type-verilog" data-inline="false"></span>Verilog</p>
-                        <p class="projectskill"><span class="iconify" data-icon="file-icons:assembly-arm" data-inline="false"></span>  Assembly language</p>
+                    <a class="project-link"  href="https://github.com/macaroonforu/16-Bit-Processor" class="github">Source Code</a>
+                    <p class="projectskill"><img src="projects/quartus.png" height="15px">Quartus Prime</p>
+                    <p class="projectskill"><img src="projects/modelsim.png" height="15px">ModelSim</p>
+                    <p class="projectskill"><span class="iconify" data-icon="vscode-icons:file-type-verilog" data-inline="false"></span>Verilog</p>
+                    <p class="projectskill"><span class="iconify" data-icon="file-icons:assembly-arm" data-inline="false"></span>Assembly language</p>
                 </div>
                 <div class="project-image-content">
                     <img class="project-image" src="./projects/processor.jpg">
@@ -234,7 +234,7 @@
                         create, update, and delete education/experience entries.</p>
                     <a class="project-link"  href="https://github.com/macaroonforu/CV-Maker" class="github">Source Code</a>
                     <a class="project-link" href="https://cv-maker-fm8l.vercel.app/" class="github">Deployment</a>
-                    <p class="projectskill"><span class="iconify" data-icon="skill-icons:react-dark" data-inline="false"></span>        React</p>
+                    <p class="projectskill"><span class="iconify" data-icon="skill-icons:react-dark" data-inline="false"></span>React</p>
                 </div>
                 <div class="project-image-content">
                     <img class="project-image" src="./projects/CV.PNG">
@@ -245,10 +245,9 @@
                 <div class="project-text-content">
                     <h2 class="individual-project-title">Webpage Screenshotting Service</h2>
                     <p class="projectdesc">A PHP script that will take a link the user provides, then call upon a program installed on my local machine (wkhtmltoimage) to screenshot the website pointed to by that link
-                        and return the image to the user. 
-                    </p>
+                        and return the image to the user.</p>
                     <a class="project-link"  href="https://github.com/macaroonforu/Webpage-Screenshoting-Service" class="github">Source Code</a>
-                    <p class="projectskill"><span class="iconify" data-icon="vscode-icons:file-type-php" data-inline="false"></span>        PHP</p>
+                    <p class="projectskill"><span class="iconify" data-icon="vscode-icons:file-type-php" data-inline="false"></span>PHP</p>
                 </div>
                 <div class="project-image-content">
                     <img class="project-image" src="./projects/amazon.png">
@@ -259,11 +258,10 @@
                 <div class="project-text-content">
                     <h2 class="individual-project-title">Web-Scraping Shell Script</h2>
                     <p  class="projectdesc">A web-scraping shell-script that parses html on a webpage according to a known content organization, 
-                        extracts relevant information, then inserts it into a locally hosted mySQL database.
-                    </p>
+                        extracts relevant information, then inserts it into a locally hosted mySQL database.</p>
                     <a class="project-link" href="https://github.com/macaroonforu/Web-Scraping-Shell-Script" class="github">Source Code</a>
-                    <p class="projectskill"><span class="iconify" data-icon="mdi:bash" data-inline="false"></span>        BASH</p>
-                    <p class="projectskill"><span class="iconify" data-icon="logos:mysql" data-inline="false"></span>        MySQL</p>
+                    <p class="projectskill"><span class="iconify" data-icon="mdi:bash" data-inline="false"></span>BASH</p>
+                    <p class="projectskill"><span class="iconify" data-icon="logos:mysql" data-inline="false"></span>MySQL</p>
                 </div>
                 <div class="project-image-content">
                     <img class="project-image" src="./projects/databases.png">
@@ -276,9 +274,9 @@
                     <p class="projectdesc">A tic-tac-toe game written with vanilla JavaScript, HTML, and CSS.</p>
                     <a class="project-link"  href="https://github.com/macaroonforu/tic-tac-toe" class="github">Source Code</a>
                     <a class="project-link" href="https://tic-tac-toe-chi-seven.vercel.app/" class="github">Deployment</a>
-                    <p class="projectskill"><span class="iconify" data-icon="logos:javascript" data-inline="false"></span>        JavaScript</p>
-                    <p class="projectskill"><span class="iconify" data-icon="vscode-icons:file-type-html" data-inline="false"></span>        HTML</p>
-                    <p class="projectskill"><span class="iconify" data-icon="vscode-icons:file-type-css" data-inline="false"></span>        CSS</p>
+                    <p class="projectskill"><span class="iconify" data-icon="logos:javascript" data-inline="false"></span>JavaScript</p>
+                    <p class="projectskill"><span class="iconify" data-icon="vscode-icons:file-type-html" data-inline="false"></span>HTML</p>
+                    <p class="projectskill"><span class="iconify" data-icon="vscode-icons:file-type-css" data-inline="false"></span>CSS</p>
                 </div>
                 <div class="project-image-content">
                     <img class="project-image" src="./projects/ttt.png">
@@ -289,13 +287,12 @@
                 <div class="project-text-content">
                     <h2 class="individual-project-title">Local Library</h2>
                     <p class="projectdesc">A library app written with vanilla JavaScript, HTML, and CSS. When a user adds a book, it is saved to local storage, 
-                        the books can also be deleted, with the option to toggle any book's status between read and not-read. 
-                    </p>
+                        the books can also be deleted, with the option to toggle any book's status between read and not-read.</p>
                     <a class="project-link" href="https://github.com/macaroonforu/Interactive-Library" class="github">Source Code</a>
                     <a class="project-link" href="https://interactive-library.vercel.app/" class="github">Deployment</a>
-                    <p class="projectskill"><span class="iconify" data-icon="logos:javascript" data-inline="false"></span>        JavaScript</p>
-                    <p class="projectskill"><span class="iconify" data-icon="vscode-icons:file-type-html" data-inline="false"></span>        HTML</p>
-                    <p class="projectskill"><span class="iconify" data-icon="vscode-icons:file-type-css" data-inline="false"></span>        CSS</p>
+                    <p class="projectskill"><span class="iconify" data-icon="logos:javascript" data-inline="false"></span>JavaScript</p>
+                    <p class="projectskill"><span class="iconify" data-icon="vscode-icons:file-type-html" data-inline="false"></span>HTML</p>
+                    <p class="projectskill"><span class="iconify" data-icon="vscode-icons:file-type-css" data-inline="false"></span>CSS</p>
                 </div>
                 <div class="project-image-content">
                     <img class="project-image" src="./projects/library.png">
@@ -308,9 +305,9 @@
                     <p class="projectdesc">A rock-paper-scissors game written with vanilla JavaScript, HTML, and CSS.</p>
                     <a class="project-link"  href="https://github.com/macaroonforu/rock-paper-scissors" class="github">Source Code</a>
                     <a class="project-link" href="https://rock-paper-scissors-six-jade.vercel.app/" class="github">Deployment</a>
-                    <p class="projectskill"><span class="iconify" data-icon="logos:javascript" data-inline="false"></span>        JavaScript</p>
-                    <p class="projectskill"><span class="iconify" data-icon="vscode-icons:file-type-html" data-inline="false"></span>        HTML</p>
-                    <p class="projectskill"><span class="iconify" data-icon="vscode-icons:file-type-css" data-inline="false"></span>        CSS</p>
+                    <p class="projectskill"><span class="iconify" data-icon="logos:javascript" data-inline="false"></span>JavaScript</p>
+                    <p class="projectskill"><span class="iconify" data-icon="vscode-icons:file-type-html" data-inline="false"></span>HTML</p>
+                    <p class="projectskill"><span class="iconify" data-icon="vscode-icons:file-type-css" data-inline="false"></span>CSS</p>
                 </div>
                 <div class="project-image-content">
                     <img class="project-image" src="./projects/rps.png">
