--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                         <ul class="socialist">
                             <li style="list-style:none;text-decoration:underline;"><span class="iconify" data-icon="skill-icons:linkedin" data-inline="false"></span><a class="sociallink" href="https://www.linkedin.com/in/claire-dimitriuc/">Linkedin</a></li>
                             <li style="list-style:none;text-decoration:underline;"><span class="iconify" data-icon="devicon:github" data-inline="false"></span><a class="sociallink" href="https://github.com/macaroonforu">Github</a></li>
+                            <li style="list-style:none;text-decoration:underline;"><span class="iconify" data-icon="ic:round-email" data-inline="false"></span><a class="sociallink" href="mailto:claire.dimitriuc@mail.utoronto.ca">Email</a></li>
                             <!--li style="list-style:none;text-decoration:underline;"><span class="iconify" data-icon="pepicons-pencil:cv-circle-filled" data-inline="false"></span><a class="sociallink" href="./ClaireDimitriucResume.pdf">Resume</a></li-->
                         </ul>
                     </div>
