fixed spacing with quartus and modelsim logos

--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
                     <p class="projectskill"><span class="iconify" data-icon="simple-icons:altiumdesigner" data-inline="false"></span>Altium Designer</p>
                     <p class="projectskill"><span class="iconify" data-icon="game-icons:soldering-iron" data-inline="false"></span>Soldering</p>
                     <p class="projectskill"><span class="iconify" data-icon="arcticons:oscilloscope" data-inline="false"></span>Waveform Generator/Oscilloscope/DMM</p>
-                    <p class="projectskill"><img src="projects/quartus.png" height="15px">Quartus Prime</p>
-                    <p class="projectskill"><img src="projects/modelsim.png" height="15px">ModelSim</p>
+                    <p class="projectskill"><img src="projects/quartus.png" height="15px"> Quartus Prime</p> <!--Need at least one space otherwise text will touch image-->
+                    <p class="projectskill"><img src="projects/modelsim.png" height="15px"> ModelSim</p>
                 </div>
                 <div class="project-image-content">
                     <img class="project-image" src="./projects/radio.jpg">
@@ -202,8 +202,8 @@
                     <h2 class="individual-project-title">16-Bit Processor</h2>
                     <p class="projectdesc">A CPU designed with Verilog featuring general purpose registers, a stack pointer, a link register, a program counter, and an ALU, all of which are controlled by a finite-state machine. The processor supports memory read/writes as well as subroutines. Additionally, a game that interacts with LED switches and the HEX Display on the development board was written in assembly language to be run using the instruction set provided by the processor.</p>
                     <a class="project-link"  href="https://github.com/macaroonforu/16-Bit-Processor" class="github">Source Code</a>
-                    <p class="projectskill"><img src="projects/quartus.png" height="15px">Quartus Prime</p>
-                    <p class="projectskill"><img src="projects/modelsim.png" height="15px">ModelSim</p>
+                    <p class="projectskill"><img src="projects/quartus.png" height="15px"> Quartus Prime</p>
+                    <p class="projectskill"><img src="projects/modelsim.png" height="15px"> ModelSim</p>
                     <p class="projectskill"><span class="iconify" data-icon="vscode-icons:file-type-verilog" data-inline="false"></span>Verilog</p>
                     <p class="projectskill"><span class="iconify" data-icon="file-icons:assembly-arm" data-inline="false"></span>Assembly language</p>
                 </div>
